# wlEngine

./: .gitignore  .ycm_extra_conf.py  CMakeInclude.txt  CMakeLists.txt  EngineManager.cpp  EngineManager.hpp  Input.cpp  Input.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  Settings.cpp  Settings.hpp  Time.cpp  Time.hpp  config.h  document.md  log.txt  planning.xlsx  settings.json  wlEngine.cpp  wlEngine.hpp
Component/: Animation.cpp  Animation.hpp  Camera2D.cpp  Camera2D.hpp  Component.cpp  Component.hpp  Memory.hpp  Model.cpp  Model.hpp  RigidBody.cpp  RigidBody.hpp  Script.cpp  Script.hpp  Sprite.cpp  Sprite.hpp  StateMachine.cpp  StateMachine.hpp  TRigidbody.cpp  TRigidbody.hpp  Text.cpp  Text.hpp  Transform.cpp  Transform.hpp
Component/Struct/: Clip.hpp  Texture.cpp  Texture.hpp
Event/: Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp
GameEditor/: GameEditor.cpp  GameEditor.hpp  SceneData.cpp  SceneData.hpp
GameObject/: .GameObject.cpp.swp  .GameObject.hpp.swp  .Transform.cpp.swp  .Transform.hpp.swp  Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  GameObject.cpp  GameObject.hpp  RigidBody.cpp  RigidBody.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
GameObject/Component/: .Texture.hpp.swp  Component.cpp  Component.hpp  Memory.hpp  Model.cpp  Model.hpp  RigidBody.cpp  Script.cpp  Script.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp
GameObject/System/: AnimationSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  System.cpp  System.hpp  UISystem.cpp  UISystem.hpp
Graphics/: GraphicsManager.cpp  GraphicsManager.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Manager/: ResourceManager.cpp  ResourceManager.hpp
Math/: Vector3.hpp
Memory/: FixedArrayAllocator.hpp  StackAllocator.hpp
Physics/: DebugDrawShader.frag  DebugDrawShader.vert  GLES-Render.cpp  GLES-Render.hpp  PhysicsDebugDraw.cpp  PhysicsDebugDraw.hpp  WorldContactListener.cpp  WorldContactListener.hpp
SDL2/include/: SDL.h
System/: AnimationSystem.cpp  EventSystem.cpp  EventSystem.hpp  InputSystem.cpp  InputSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  StateMachineSystem.cpp  System.hpp  UISystem.cpp  UISystem.hpp
UI/: DeveloperUI.cpp  DeveloperUI.hpp
Utility/: Utility.cpp  Utility.hpp
imgui/: imgui.cpp
log/: plan.txt
private_include/: GameObject.hpp  Graphics.hpp  Math.hpp  Memory.hpp
